style.css
body {
    font-family: 'Didact Gothic', sans-serif;
}

h1,
h2,
p {
    margin: 0;
    padding: 0;
}

h2 {
    text-align: center;
    background-color: green;
    padding: 5px;
    color: white;
    margin: 5px 0;
    opacity: 0;
}

main div {
    font-size: 30px;
    font-weight: bold;
}

main {
    max-width: 800px;
    margin: 0px auto;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    grid-gap: 5px;
}

